<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/borrowedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/borrowed"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/borrowedEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toRightOf="@+id/borrowedTextView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/interestTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borrowedTextView"/>

    <SeekBar
        android:id="@+id/interestBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="0"
        android:max="200"
        android:progress="100"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginRight="48dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestTextView"/>

    <TextView
        android:id="@+id/startSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startRate"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestBar"/>

    <TextView
        android:id="@+id/endSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endRate"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestBar"/>

    <CheckBox
        android:id="@+id/taxCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="20dp"
        android:text="@string/tax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startSeekBar" />

    <TextView
        android:id="@+id/term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taxCheckBox" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/fifteen"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twenty"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirty"/>
    </RadioGroup>

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="onClick"
        android:text="@string/calc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/payable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/payable"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc" />

</androidx.constraintlayout.widget.ConstraintLayout>